--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,9 +18,25 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
     
 }
 
+/* loader */
+.loader {
+    border: 5px solid #f3f3f3;
+    /* -webkit-animation: spin 1s linear infinite; */
+    animation: spin 1s linear infinite;
+    border-top: 5px solid #555;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 .who_picture{
     width: 100%;
-    //height: 100%;
+    /* //height: 100%; */
     object-fit: contain;
     }
     
