--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,11 @@
     margin-left: 0px !important;
     padding-left: 0px !important;
 } */
+@media (min-width: 576px) and (max-width: 770px) {  
+    .container{
+        max-width: 700px !important;
+    }
+}
 
 body {
     /* previous color: */
@@ -64,7 +69,7 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
 
 .sectfeedback{
     padding-right: 20px;
-    text-align: justify;
+    /* text-align: justify; */
 }
 
 .enai{
@@ -89,8 +94,8 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .active, .navbar-brand:hover {
-    border-bottom: 2px solid black;
-    margin-top: 2px;
+    /* border-bottom: 2px solid black;
+    margin-top: 2px; */
 }
 
 .okraj{
@@ -159,6 +164,17 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
     height: auto;
     padding: 10px;
 }
+
+.greenColor{
+    color: rgb(0, 153, 153) !important;
+    border-color: rgb(0, 153, 153) !important;
+    /* background-color:  rgb(0, 153, 153) !important; */
+}
+.greenColor:hover{
+    color: white !important;
+    background-color: rgb(0, 153, 153) !important;
+}
+
 
 /* Make circles that indicate the steps of the form: */
 .step {
