--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,6 +49,16 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-bottom: 10px
 }
 
+.alertLoad {
+    width: 80vw;
+    margin: 2rem auto;
+    background-color: #d4edda;
+    color: #155724;
+    padding: 0.75rem 1.25rem;
+    border-radius: 0.25rem;
+    display: none;
+}
+
 
 .justify{
   text-align:justify;
